fixed some spacing issues

--- a/src/components/form-input/form-input.scss
+++ b/src/components/form-input/form-input.scss
@@ -28,7 +28,7 @@ $main-color: black;
       outline: none;
     }
 
-    &:focus ~ .form-input-label {
+    &:focus~.form-input-label {
       @include shrinkLabel();
     }
   }
@@ -50,5 +50,9 @@ $main-color: black;
     &.shrink {
       @include shrinkLabel();
     }
+  }
+
+  @media screen and (max-width: 1500px) {
+    margin: 5px 0 0 0;
   }
 }
